_sass/custom-style.scss
@import "rouge-github";
@import url('https://fonts.googleapis.com/css?family=Arvo:400,700,400italic');

// ########################
// defaults
// ########################
html {
  scroll-behavior: smooth;
}

@font-face {
  font-family: 'cmu-serif';
  font-style: normal;
  font-weight: normal;
  src: url('/assets/fonts/cmu-serif/cmunrm.woff') format('woff');
}
@font-face {
  font-family: 'cmu-serif';
  font-style: italic;
  font-weight: normal;
  src: url('/assets/fonts/cmu-serif/cmunti.woff') format('woff');
}
@font-face {
  font-family: 'cmu-serif';
  font-style: normal;
  font-weight: bold;
  src: url('/assets/fonts/cmu-serif/cmunbx.woff') format('woff');
}
@font-face {
  font-family: 'cmu-serif';
  font-style: italic;
  font-weight: bold;
  src: url('/assets/fonts/cmu-serif/cmunbi.woff') format('woff');
}

// Header numbering added using the numbered class
h1, h2, h3, h4, h5, h6 {padding-top: 0px}

body {counter-reset: h2}
h2 {counter-reset: h3}
h3 {counter-reset: h4}
h4 {counter-reset: h5}
h5 {counter-reset: h6}

.numbered h2:before {counter-increment: h2; content: counter(h2) " "}
.numbered h3:before {counter-increment: h3; content: counter(h2) "." counter(h3) " "}
.numbered h4:before {counter-increment: h4; content: counter(h2) "." counter(h3) "." counter(h4) " "}
.numbered h5:before {counter-increment: h5; content: counter(h2) "." counter(h3) "." counter(h4) "." counter(h5) " "}
.numbered h6:before {counter-increment: h6; content: counter(h2) "." counter(h3) "." counter(h4) "." counter(h5) "." counter(h6) " "}

h2.nocount:before, h3.nocount:before, h4.nocount:before, h5.nocount:before, h6.nocount:before { content: ""; counter-increment: none }

// Add solid underline to all headings
title span {
  border-bottom: 1px solid #ccc;;
}

h1, h2, h3, h4, h5, h6 {
  color:#232323;
  margin:10px 0 10px;
}

p, ul, ol, table, dl {
  margin:0 0 22px;
}

body, html, p, h1, h2, h3 {
  font-family: cmu-serif, Arvo, Monaco, serif;
  line-height:1.3;
  font-weight: normal;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
}

h1, h2{
  display: block;
  border-bottom: 1px solid #ccc;
  padding-bottom: 5px;
}

h1, h2, h3{
  display: block;
  padding-bottom: 5px;
}

h1 {
  border-bottom: 2px solid #ccc;
}

h2 {
  border-bottom: 1px solid #ccc;
}

h1 {
  font-size: 30px;
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 18px;
}

h4, h5, h6 {
  font-family: cmu-serif, Arvo, Monaco, serif;
  font-weight: 700;
}

a {
  font-weight:200;
  text-decoration:none;
}

// Emphasis class
em {
  font-style: italic;
  text-align: center;
}

strong {
  font-weight:700;
}

blockquote {
  margin: 0;
  padding: 0 0 0 10px;
  font-style: italic;
  background-color: #f7f7f7;
}

dl, dt, dd, dl p {
  color: #444;
}

.header {
  font-family: Arvo, Monaco, serif;
}


dl dt {
  font-weight: bold;
}

dl dd {
  margin: 4px 4px 4px 10px;
  padding: 0px 5px 10px 0px ;
  font-style: italic;
  //background-color: #f7f7f7
}

dl p {
  padding-left: 10px;
  font-style: normal;
}

hr {
  border:0;
  background:#ccc;
  height:1px;
  margin:0 0 10px;
}

/* Images */
p img {
  //position: relative;
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 90%;
  z-index: 100;
  border: 3px solid #ccc;
  border-radius: 5px;
}


p img + em:before{
  //text-indent: 10px;
  //text-align: center;
  content: "Figure ";
  font-weight: bold;
}

p img + em {
  display: inline-block;
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

//p img:hover {
//  transform: scale(2);
//}

//p img, .emoji {
//  display: inline;
//  margin: 0;
//  padding: 0;
//  vertical-align: middle;
//  text-align: center;
//  border: none;
//
//}

/* Code blocks */

code, pre {
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  color:#000;
  font-size:14px;
}

pre {
  padding: 4px 12px;
  background: #FDFEFB;
  border-radius:4px;
  border:1px solid #D7D8C8;
  overflow: auto;
  overflow-y: hidden;
  margin-bottom: 32px;
}


/* Tables */
table {
  border-top: 3px solid  black;
  border-bottom: 3px solid  black;
  //border-spacing: 1;
  border-collapse: collapse;
  background: white;
  //border-radius: 10px;
  overflow: hidden;
  width: 100%;
  margin: 0 auto;
  position: relative;
}
table * {
  position: relative;
}
table th {
  //background-color: #ccc;
  border-bottom: 1px solid  #ccc;
}
table tr {
  padding-bottom: 2px;
  padding-top: 2px;
}

table tr:nth-child(even) {background-color: #f7f7f7}

//
//table td, table th {
//  padding-left: 2px;
//
//}
//table thead tr {
//  height: 60px;
//  //background: #36304a;
//  border-bottom: 1px solid black;
//}
//table tbody tr {
//  height: 50px;
//  background: white;
//}
//table tbody tr:last-child {
//  border: 0;
//}
//table td, table th {
//  text-align: left;
//}
//table td.l, table th.l {
//  text-align: right;
//}
//table td.c, table th.c {
//  text-align: center;
//}
//table td.r, table th.r {
//  text-align: center;
//}

//
//table {
//  width:100%;
//}
//
//table {
//  border: 1px solid #ccc;
//  margin-bottom: 32px;
//  text-align: left;
//}

//th {
//  font-family: cmu-serif, 'Arvo', Helvetica, Arial, sans-serif;
//  font-size: 18px;
//  font-weight: normal;
//  padding: 10px;
//  background: #232323;
//  color: #FDFEFB;
//}
//
//td {
//  padding: 10px;
//  background: #ccc;
//}



// ###########################
// Custom classes
// ###########################
section{
  background: lightblue;
  padding: 2em 1em;
}


// sticky class for div subclasses
.sticky {
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  padding-top: 11px;    /* ➜ compensate for the trick */
  z-index: 100;
  transition: .5s;
}

// table of content class
.toc a:hover {
  text-decoration: underline;
}

.toc li {
  font-size: 85%;
}

.toc ol {
  list-style-type: none;
  counter-reset: item;
  margin: 0;
  padding: 0;
}

.toc ol > li {
  display: table;
  counter-increment: item;
}

.toc ol > li:before {
  content: counters(item, ".") " ";
  display: table-cell;
  padding-right: 0.4em;
}

.toc li ol > li {
  margin: 0;
}

.toc li ol > li:before {
  content: counters(item, ".") " ";
}

//.center { /* This is the item to center... */
//  display: inline-block;
//}
//.center-parent { /* ...and this is its parent container. */
//  text-align: center;
//}
//
//.centered {
//  width: 100%;
//  display: table;
//}

.wrapper {
  width:960px;
}

.outer-center {
  float: right;
  right: 50%;
  position: relative;
}
.inner-center {
  float: right;
  right: -50%;
  position: relative;
}
.clear {
  clear: both;
}

//
//.navbar {
//  overflow: hidden;
//  position: fixed; /* Set the navbar to fixed position */
//  width: 100%; /* Full width */
//}


@media print, screen and (max-width: 960px) {

  div.wrapper {
    width:auto;
    margin:0;
  }

  header, section, footer {
    float:none;
    position:static;
    width:auto;
  }

  footer {
    border-top: 1px solid #ccc;
    margin:0 84px 0 50px;
    padding:0;
  }

  header {
    padding-right:320px;
  }

  section {
    padding:20px 84px 20px 50px;
    margin:0 0 20px;
  }

  header a small {
    display:inline;
  }

  header ul {
    position:absolute;
    right:130px;
    top:84px;
  }
}

@media print, screen and (max-width: 720px) {
  body {
    word-wrap:break-word;
  }

  header {
    padding:10px 20px 0;
    margin-right: 0;
  }

  section {
    padding:10px 0 10px 20px;
    margin:0 0 30px;
  }

  footer {
    margin: 0 0 0 30px;
  }

  header ul, header p.view {
    position:static;
  }
}

@media print, screen and (max-width: 480px) {

  header ul li.download {
    display:none;
  }

  footer {
    margin: 0 0 0 20px;
  }

  footer a{
    display:block;
  }

}

@media print {
  body {
    padding:0.4in;
    font-size:12pt;
    color:#444;
  }
}

